--- a/misfire-sys/Cargo.toml
+++ b/misfire-sys/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "misfire-sys"
-version = "0.1.0-alpha-2"
+version = "0.2.0"
 authors = [
     "Nathan Kent <nkent2@cs.rochester.edu>",
     "Marco Boneberger <m.boneberger@tu-bs.de>",
